# jutil

./: .clang-format  CMakeLists.txt  CMakePresets.json
scripts/: build.sh
src/: CMakeLists.txt  jutil.cpp  jutil_test.cpp
src/jutil/: alg.h  argparse.h  b64.h  bit.h  core.h  data.h  fun.h  lmacro.inl  macro.h  match.h  meta.h  soa.h  stack.h  vec.h
